Minor update to styles to fix parallax image on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -119,18 +119,27 @@ body,
   border-radius: 0rem;
 }
 
-@media screen and (max-width: 767px) {
-  .backgroundImageCarousell {
-      height: calc(100% - 114px - 2.5rem - 5px);
-  }
-}
-
 #beautifulPlaceContainerDiv {
   background-image: url("../src/assets/beautifulPlaceImage.jpg");
   min-height: 100% !important;
   /* Create the parallax scrolling effect */
-  background-attachment: fixed !important;
   background-position: center !important;
   background-repeat: no-repeat !important;
   background-size: cover !important;
+}
+
+@media screen and (max-width: 767px) {
+  .backgroundImageCarousell {
+      height: calc(100% - 114px - 2.5rem - 5px);
+  }
+
+  #beautifulPlaceContainerDiv {
+    background-image: url("../src/assets/beautifulPlaceImage.jpg");
+    min-height: 100% !important;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+  }
 }
